--- a/HealthcareApp/src/Healthcare.Application/Application.csproj
+++ b/HealthcareApp/src/Healthcare.Application/Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
  <ItemGroup>
-         <ProjectReference Include="..\Domain\Domain.csproj" />
+         <ProjectReference Include="..\Healthcare.Domain\Domain.csproj" />
     </ItemGroup>
 
  <ItemGroup>
