--- a/HealthcareApp/src/HealthcareApi/appsettings.Development.json
+++ b/HealthcareApp/src/HealthcareApi/appsettings.Development.json
@@ -1,8 +1,15 @@
-{
+{"ConnectionStrings": {
+  "HealthcareDb" : "server=localhost;Database=healthcare;uid=SA;pwd=VeryStr0ngP@ssw0rd;TrustServerCertificate=true"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Key": "poNjiNgA2ktxDk36GJbWwBIGdhiQzZ",
+    "Issuer": "https://localhost:7255",
+    "Audience": "https://localhost:7255"
   }
 }
