--- a/HealthcareApp/src/Healthcare.Infrastructure/Infrastructure.csproj
+++ b/HealthcareApp/src/Healthcare.Infrastructure/Infrastructure.csproj
@@ -27,4 +27,16 @@
     <ProjectReference Include="..\Healthcare.Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Migrations\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="Migrations\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Migrations\**" />
+  </ItemGroup>
+
 </Project>
