--- a/HealthcareApp/src/HealthcareApi/HealthcareApi.csproj
+++ b/HealthcareApp/src/HealthcareApi/HealthcareApi.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <Compile Remove="WeatherForecast.cs" />
     <Compile Remove="Controllers\TestController.cs" />
+    <Compile Remove="Controllers\TestRoleController.cs" />
   </ItemGroup>
 
 </Project>
