--- a/HealthcareApp/src/Healthcare.Application/Application.csproj
+++ b/HealthcareApp/src/Healthcare.Application/Application.csproj
@@ -15,6 +15,7 @@
    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.1" />
    <PackageReference Include="MediatR" Version="12.2.0" />
    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.0" />
+   <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
  </ItemGroup>
  
 </Project>
