--- a/HealthcareApp/src/LearnMultithreading/LearnMultithreading.csproj
+++ b/HealthcareApp/src/LearnMultithreading/LearnMultithreading.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Healthcare.Infrastructure\Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
